# embassy-nucleo-f446re

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  MOTOR_AUTOTUNING.md  PLAN.md  pre-commit-rust.sh
.cargo/: config.toml
can_message/: Cargo.toml
can_message/src/: lib.rs  message.rs
foc/: Cargo.toml
foc/src/: angle_input.rs  controller.rs  current.rs  encoder.rs  foc.rs  lib.rs  lowpass_filter.rs  motor.rs  output_angle.rs  pid.rs  pwm.rs  pwm_output.rs  sensor.rs  tracking_observer.rs  units.rs  velocity_tuning.rs
monitor/: Cargo.toml
monitor/src/: main.rs
mujoco-model/: README.md  actuator.xml  actuator_standalone.xml  actuator_sysid.json  pyproject.toml
mujoco-model/src/mujoco_actuator_sim/: __init__.py  __main__.py  sysid.py
src/: as5600.rs  clock.rs  foc.rs  i2c.rs  main.rs
stm32-kit/: CAN_RECOVERY.md  Cargo.toml  README.md  rust-toolchain.toml
stm32-kit/.cargo/: config.toml
stm32-kit/scripts/: can_diag.sh
stm32-kit/src/: adc.rs  as5047p.rs  as5048a.rs  as5600.rs  bldc_driver.rs  calibration.rs  can.rs  can_message.rs  clock.rs  cordic.rs  cordic_selftest.rs  current_tuning.rs  drv8316.rs  drv8316c.rs  drv8316t.rs  dual_encoder.rs  encoder_correction.rs  encoder_correction_tuning.rs  flash_config.rs  flycat5010.rs  foc_isr.rs  gear_sensor.rs  gm2804.rs  gm3506.rs  i2c.rs  main.rs  motor_tuning.rs  output_tracker.rs  pwm.rs  velocity_tuning.rs
stm32-kit/src/app/: can_control.rs  encoder.rs  fault.rs  foc_setup.rs  init.rs  mod.rs  monitor.rs  persistence.rs  tuner_init.rs  units.rs
stm32-kit/tests/: gear_sensor.rs
