[package]
name = "blink"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = [
  "defmt",
  "time-driver-any",
  "stm32f446re",
  "memory-x",
  "unstable-pac",
] }
embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.4.0", features = [
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
  "defmt",
] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"

defmt = { version = "1.0.1" }
defmt-rtt = { version = "1.0.0" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[[bin]]
name = "blink"
path = "src/main.rs"
test = false
doctest = false
bench = false
