[package]
name = "blink"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "56572ef0adffd6258adc10fb424e37a8b4ddc19c", features = [
  "defmt",
  "time-driver-any",
  "stm32f446re",
  "memory-x",
  "unstable-pac",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "56572ef0adffd6258adc10fb424e37a8b4ddc19c", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "56572ef0adffd6258adc10fb424e37a8b4ddc19c", features = [
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
  "defmt",
] }

cortex-m = { version = "^0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "^0.7"

defmt = { version = "^1.0" }
defmt-rtt = { version = "^1.0" }
panic-probe = { version = "^1.0", features = ["print-defmt"] }

[[bin]]
name = "blink"
path = "src/main.rs"
test = false
doctest = false
bench = false
