[package]
name = "stm32-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
foc = { path = "../foc", default-features = false }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "56572ef0adffd6258adc10fb424e37a8b4ddc19c", features = [
  "defmt",
  "time-driver-any",
  "stm32f446re",
  "memory-x",
  "unstable-pac",
], optional = true }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "56572ef0adffd6258adc10fb424e37a8b4ddc19c", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
], optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "56572ef0adffd6258adc10fb424e37a8b4ddc19c", features = [
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
  "defmt",
], optional = true }

cortex-m = { version = "^0.7", features = [
  "critical-section-single-core",
], optional = true }
cortex-m-rt = { version = "^0.7", optional = true }

defmt = { version = "^1.0", optional = true }
defmt-rtt = { version = "^1.0", optional = true }
panic-probe = { version = "^1.0", features = ["print-defmt"], optional = true }
libm = "^0.2"

[features]
default = [
  "embassy-stm32",
  "embassy-executor",
  "embassy-time",
  "cortex-m",
  "cortex-m-rt",
  "defmt",
  "defmt-rtt",
  "panic-probe",
]

[[bin]]
name = "stm32-kit"
path = "src/main.rs"
test = false
doctest = false
bench = false
