[package]
name = "stm32-kit"
version = "0.1.0"
edition = "2024"

[dependencies]
can_message = { path = "../can_message", default-features = false }
foc = { path = "../foc", default-features = false }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192", features = [
  "defmt",
  "time-driver-any",
  "stm32g431rb",
  "memory-x",
  "unstable-pac",
], optional = true }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
], optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192", features = [
  "defmt-timestamp-uptime",
  "tick-hz-1_000_000",
  "defmt",
], optional = true }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "76e369b8aa5641b6f3f4440824f559def6cf6192", features = [
  "defmt",
], optional = true }

cortex-m = { version = "^0.7", features = [
  "critical-section-single-core",
], optional = true }
cortex-m-rt = { version = "^0.7", optional = true }
critical-section = { version = "^1.2", optional = true }

defmt = { version = "^1.0", optional = true }
defmt-rtt = { version = "^1.0", optional = true }
panic-probe = { version = "^1.0", features = ["print-defmt"], optional = true }
embedded-can = "^0.4"

[features]
default = [
  "embassy-stm32",
  "embassy-executor",
  "embassy-time",
  "embassy-sync",
  "cortex-m",
  "cortex-m-rt",
  "critical-section",
  "defmt",
  "defmt-rtt",
  "panic-probe",
]

[[bin]]
name = "stm32-kit"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
